--- a/src/main/resources/com/github/mariosplen/bookings/fxml/reservation/reservation-details-view.fxml
+++ b/src/main/resources/com/github/mariosplen/bookings/fxml/reservation/reservation-details-view.fxml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
-
-<?import org.controlsfx.control.SearchableComboBox?>
-<AnchorPane prefHeight="601.0" prefWidth="931.0" styleClass="contentPane" stylesheets="@../../bookings.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.mariosplen.bookings.controllers.reservation.ReservationDetailsView">
-    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="153.0" layoutY="14.0" styleClass="header" text="Reservation Details" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml" prefHeight="601.0" prefWidth="931.0" styleClass="contentPane"
+            stylesheets="@../../bookings.css" xmlns="http://javafx.com/javafx"
+            fx:controller="com.github.mariosplen.bookings.controllers.reservation.ReservationDetailsView">
+    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="153.0" layoutY="14.0" styleClass="header"
+           text="Reservation Details" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
     <HBox layoutX="366.0" layoutY="122.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="0.0"
           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
         <VBox alignment="CENTER" prefHeight="213.0" prefWidth="220.0" spacing="10.0"
@@ -38,27 +34,31 @@
         </VBox>
     </HBox>
 
-    <HBox alignment="CENTER" layoutX="160.0" prefHeight="112.0" prefWidth="885.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
+    <HBox alignment="CENTER" layoutX="160.0" prefHeight="112.0" prefWidth="885.0" AnchorPane.bottomAnchor="30.0"
+          AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
         <VBox alignment="CENTER" prefHeight="103.0" prefWidth="477.0">
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                 <VBox.margin>
-                    <Insets top="40.0" />
+                    <Insets top="40.0"/>
                 </VBox.margin>
-                <SearchableComboBox fx:id="usersSearchBox" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="51.0" prefWidth="477.0" promptText="Guest" styleClass="choice-box" />
+                <ComboBox fx:id="usersSearchBox" maxHeight="-Infinity" maxWidth="-Infinity"
+                          prefHeight="51.0" prefWidth="477.0" promptText="Guest"
+                          styleClass="choice-box"/>
                 <Button mnemonicParsing="false" onAction="#onAddGuestBtnClicked" styleClass="backButton">
                     <graphic>
                         <ImageView fitHeight="51.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
-                            <Image url="@../../media/icons/add-user.png" />
+                            <Image url="@../../media/icons/add-user.png"/>
                         </ImageView>
                     </graphic>
                 </Button>
             </HBox>
-            <Text fx:id="errorMsg" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="errorText" />
-            <Button mnemonicParsing="false" onAction="#onSubmitClicked" prefHeight="58.0" prefWidth="193.0" styleClass="bigBtn" text="Submit" />
+            <Text fx:id="errorMsg" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="errorText"/>
+            <Button mnemonicParsing="false" onAction="#onSubmitClicked" prefHeight="58.0" prefWidth="193.0"
+                    styleClass="bigBtn" text="Submit"/>
         </VBox>
     </HBox>
     <padding>
-        <Insets bottom="10.0" left="80.0" right="80.0" top="25.0" />
+        <Insets bottom="10.0" left="80.0" right="80.0" top="25.0"/>
     </padding>
 
 </AnchorPane>
